2013-03-01
----------

Changed the form of the WELL generator after
I discovered how it worked

Added more information to the README


2013-02-22
----------

Initial commit of the basic structure
of the library, including the two first
generators: parisi-rapuano and WELL512

Added the Makefile and the Changelog