@@ -6,12 +6,16 @@ CFLAGS += $(ERROR_FLAGS)
 
 OBJ_RANDS = parisi.o \
 			well.o
+OBJ_RANDS_FINAL = rands.o
+LIB_RANDS_FINAL = librands.a
 
 rands: $(OBJ_RANDS)
-		ld -r $(OBJ_RANDS) -o rands.o
+		ld -r $(OBJ_RANDS) -o $(OBJ_RANDS_FINAL)
+		ar rcs $(LIB_RANDS_FINAL) $(OBJ_RANDS)
 
 parisi.o: parisi.c
 well.o: well.c
 
 clean:
 		@rm *.o
+		@rm $(LIB_RANDS_FINAL)
