@@ -1,3 +1,12 @@
+2013-03-04
+----------
+
+Modified the Makefile, now it also creates
+a library that you can link using -lrands
+and pointing with -L to wherever librands.a
+is (^_^)
+
+
 2013-03-01
 ----------
 
